<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="vgroup.demoweek4.MenuActivity"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_15dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/jsonBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/json" />

        <Button
            android:id="@+id/mapBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/google_map" />

        <Button
            android:id="@+id/multiMediaBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/LightSkyBlue"
            android:text="@string/multimedia" />

        <LinearLayout
            android:id="@+id/hidden_menu"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible"
            android:weightSum="3">

            <Button
                android:id="@+id/inbuilt_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin001"
                android:layout_weight="1.5"
                android:background="@color/Bisque"
                android:gravity="center"
                android:text="@string/inbuilt_camera" />

            <Button
                android:id="@+id/custom_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin001"
                android:layout_weight="1.5"
                android:background="@color/Bisque"
                android:gravity="center"
                android:text="@string/custom_camera" />

            <Button
                android:id="@+id/camera_gallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin001"
                android:layout_weight="1"
                android:background="@color/Bisque"
                android:gravity="center"
                android:visibility="gone"
                android:text="@string/gallery" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="Demo Week 4 Aman Anand"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="@dimen/text_size_24sp"
        android:textStyle="bold" />
</LinearLayout>
